Thread watcher en thread updater thing spacing fixes
- thread watcher (vertical) spacing is now the same as the "BOARDS" list
spacing
- horizontal spacing adjustments to the update status thing in the down
left corner

--- a/Stilig.css
+++ b/Stilig.css
@@ -143,6 +143,14 @@ div.navLinks.desktop {
   left: -500px !important;
 }
 
+#update-status.new {
+  margin-left: 0.2% !important;
+}
+
+#update-status:not(.empty) + #update-timer:not(.empty):not(.loading) {
+  margin-left: 0px !important;
+}
+
 .autohide body {
   margin-left: -167px !important;
 }
@@ -558,6 +566,7 @@ div.navLinks.desktop {
 }
 
 #watched-threads .watcher-link {
+  margin-top: 1px !important;
   margin-bottom: -2px !important;
 }
 
@@ -1511,25 +1520,26 @@ textarea:focus {
 */
 
 @-moz-document regexp("https?://.*.(google.com/recaptcha/api2).*") {
-  
+
 *:not([class*="recaptcha-checkbox"]) {
   color: #333333 !important; 
   background: #fff !important;
   border-color: #fff !important;
   border-radius: 0 !important;
 }
-  
+
 .rc-anchor-center-container {
 	margin-left: 25% !important;
 }
-  
+
 .recaptcha-checkbox-border { 
   background: #e5e5e5 !important; 
 }
- 
+
+.rc-anchor-normal-footer,
 .rc-anchor-logo, 
-.rc-anchor-privacy { 
+.rc-anchor-privacy {
   display: none !important; 
 }
-  
+
 }
